# awesome-claude-universe

./: .gitignore  CHANGELOG.md  MANIFEST.tsv  README.md  claude.txt
claude-code-system-prompts/: CHANGELOG.md
claude-session-restore/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
claude-session-restore/session-summary/: Cargo.toml
claude-session-restore/session-summary/src/: main.rs
claude-session-restore/skill/: SKILL.md
claude-session-restore/types/: Cargo.toml
claude-session-restore/types/src/: lib.rs
claude-session-restore/types/src/events/: attachment.rs  message.rs  metadata.rs  mod.rs  progress.rs  root.rs  system.rs  tool_result.rs
claude-skills-jeffallan/: CHANGELOG.md  README.md  ROADMAP.md  version.json
claude-skills-jeffallan/.claude-plugin/: marketplace.json  plugin.json
continue/extensions/cli/src/: freeTrialTransition.test.ts
dify/docker/: .env.example
parry/: Cargo.toml  README.md  codecov.yml  deny.toml  flake.nix  justfile
parry/.github/workflows/: ci.yml  release.yaml
parry/crates/core/src/: lib.rs
parry/crates/daemon/src/: client.rs  scan_cache.rs  server.rs
parry/crates/daemon/tests/: e2e.rs
parry/crates/destructive/src/: bash.rs  lib.rs
parry/crates/exfil/src/: bash.rs  consts.rs  interpreter.rs  lib.rs  patterns.rs  util.rs
parry/crates/hook/src/: claude_md.rs  post_tool_use.rs  pre_tool_use.rs  (+2 more)
ralph-wiggum-bdd/: README.md
ralph-wiggum-bdd/scripts/: ralph-wiggum-bdd.sh
scripts/: clone_manifest.sh  push_incremental.sh  sync_from_claude_txt.py
sources/claude-code-action/test/: sanitizer.test.ts
(+5 files in other folders)
