[package]
name = "session-summary"
version = "0.1.0"
edition = "2021"
authors = ["ZENG3LD <zengeld.github@proton.me>"]
license = "MIT OR Apache-2.0"
description = "CLI tool for summarizing and restoring Claude Code sessions"
repository = "https://github.com/ZENG3LD/claude-session-restore"
keywords = ["claude", "session", "cli", "restore"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "session-summary"
path = "src/main.rs"

[dependencies]
claude-session-types = { path = "../types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = "0.4"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Colored output
colored = "2.1"

# Utilities
dirs = "5.0"

# Regex for commit hint extraction
regex = "1.10"
